--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -13,6 +13,8 @@
 @use "sidebar";
 @use "calendar";
 @use "my-page";
+@use "project/news";
+@use "project/documents";
 
 @import url("/assets/application-93308368.css");
 
