--- a/src/scss/_admin.scss
+++ b/src/scss/_admin.scss
@@ -28,18 +28,36 @@
 	// border: 0 none;
 	// box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
 	margin: 2em auto;
-	padding: 18px;
+	padding: 18px 22px;
 	width: 320px;
 	border: 1px solid #d0d7de;
-	background: #f9fafb;
+	background: var(--muidocs-palette-secondary-50);
 	box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+	label {
+		font-weight: 400;
+		padding-left: 2px;
+	}
 	input {
 		height: auto;
 		&[type=text], &[type=password] {
 			margin-bottom: 18px;
+			height: 44px;
+			padding-left: 12px;
+			font-size: 1.5rem;
+			letter-spacing: 0.05em;
+			font-weight: 400;
+			// font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+		}
+		&[type=password] {
+			font-family: Consolas, Monaco, monospace;
+			letter-spacing: 0.15em;
+			font-weight: 1.25rem;
 		}
 		&[type="submit"] {
-			@include components.icon-colored( var(--blue), #fff, var(--blue-700) );
+			@include components.icon-colored( var(--muidocs-palette-primary-500), #fff, var(--blue-700) );
+			width: auto;
+			text-transform: initial;
+			margin-left: auto;
 		}
 	}
 	
