--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -3,8 +3,8 @@
 #header {
 	// order: -1;
 	position: sticky;
-	top: 0;
-	background: #1d2d44;
+	top: -82px;
+	background: var(--muidocs-palette-primary-900);
 	min-height: 0;
 	padding: 22px 25px;
 	display: flex;
@@ -53,12 +53,12 @@
 			&.selected:hover,
 			&:hover {
 				background-color: transparent;
-				border-bottom-color: #fff; // var(--blue);
-				color: #fff; // var(--blue);
+				border-bottom-color: #fff; // var(--muidocs-palette-primary-500);
+				color: #fff; // var(--muidocs-palette-primary-500);
 				font-weight: 400;
 			}
 			&#new-object {
-				background-color: #3e5c76;
+				background-color: var(--muidocs-palette-primary-500);
 				border-top: 0 none;
 				border-bottom: 0 none;
 				padding: 9px 13px;
@@ -68,6 +68,9 @@
 			li {
 				a {
 					display: block;
+					&:hover {
+						background-color: var(--muidocs-palette-primary-500);
+					}
 				}
 			}
 		}
@@ -97,7 +100,8 @@
 #project-jump {
 	.drdn-trigger {
 		@include components.input-wrapper;
+		display: inline-flex;
+		align-items: center;
 		border: 0 none;
-		padding: 7px 6px;
 	}
 }
