--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -34,14 +34,237 @@
 
 	--input--border--width: 1px;
 	--input--border--type: solid;
-	--input--border--radius: 4px;
-	--input--border--color: var(--grey);
-	--input--border--padding: 5px 10px;
+	--input--border--radius: 6px;
+	--input--border--padding: 6px 16px;
 
 	--global--padding: 16px;
 
 	--max-width: 1200px;
 	--max-width--wide: 1440px;
+
+	--muidocs-palette-primary-50: hsl(210, 100%, 96%);
+	--muidocs-palette-primary-100: hsl(210, 100%, 90%);
+	--muidocs-palette-primary-200: hsl(210, 100%, 80%);
+	--muidocs-palette-primary-300: hsl(210, 100%, 70%);
+	--muidocs-palette-primary-400: hsl(210, 100%, 60%);
+	--muidocs-palette-primary-500: hsl(210, 100%, 45%);
+	--muidocs-palette-primary-600: hsl(210, 100%, 42%);
+	--muidocs-palette-primary-700: hsl(210, 100%, 38%);
+	--muidocs-palette-primary-800: hsl(210, 100%, 30%);
+	--muidocs-palette-primary-900: hsl(210, 100%, 23%);
+	--muidocs-palette-primary-main: hsl(210, 100%, 45%);
+	--muidocs-palette-primary-light: hsl(210, 100%, 70%);
+	--muidocs-palette-primary-dark: hsl(210, 100%, 38%);
+	--muidocs-palette-primary-contrastText: #fff;
+	--muidocs-palette-primary-mainChannel: 0 115 230;
+	--muidocs-palette-primary-lightChannel: 102 179 255;
+	--muidocs-palette-primary-darkChannel: 0 97 194;
+	--muidocs-palette-primary-contrastTextChannel: 255 255 255;
+	--muidocs-palette-secondary-50: hsl(215, 15%, 97%);
+	--muidocs-palette-secondary-100: hsl(215, 15%, 92%);
+	--muidocs-palette-secondary-200: hsl(215, 15%, 89%);
+	--muidocs-palette-secondary-300: hsl(215, 15%, 82%);
+	--muidocs-palette-secondary-400: hsl(215, 15%, 75%);
+	--muidocs-palette-secondary-500: hsl(215, 15%, 65%);
+	--muidocs-palette-secondary-600: hsl(215, 15%, 50%);
+	--muidocs-palette-secondary-700: hsl(215, 15%, 40%);
+	--muidocs-palette-secondary-800: hsl(215, 15%, 22%);
+	--muidocs-palette-secondary-900: hsl(215, 15%, 12%);
+	--muidocs-palette-secondary-main: hsl(210, 14%, 87%);
+	--muidocs-palette-secondary-contrastText: hsl(210, 14%, 22%);
+	--muidocs-palette-secondary-light: hsl(210, 14%, 89.6%);
+	--muidocs-palette-secondary-dark: hsl(210, 14%, 60.9%);
+	--muidocs-palette-secondary-mainChannel: 217 222 226;
+	--muidocs-palette-secondary-lightChannel: 225 228 232;
+	--muidocs-palette-secondary-darkChannel: 141 155 169;
+	--muidocs-palette-secondary-contrastTextChannel: 48 56 64;
+	--muidocs-palette-divider: hsl(215, 15%, 92%);
+	--muidocs-palette-primaryDark-50: hsl(210, 14%, 92%);
+	--muidocs-palette-primaryDark-100: hsl(210, 14%, 87%);
+	--muidocs-palette-primaryDark-200: hsl(210, 14%, 72%);
+	--muidocs-palette-primaryDark-300: hsl(210, 14%, 56%);
+	--muidocs-palette-primaryDark-400: hsl(210, 14%, 36%);
+	--muidocs-palette-primaryDark-500: hsl(210, 14%, 28%);
+	--muidocs-palette-primaryDark-600: hsl(210, 14%, 22%);
+	--muidocs-palette-primaryDark-700: hsl(210, 14%, 13%);
+	--muidocs-palette-primaryDark-800: hsl(210, 14%, 9%);
+	--muidocs-palette-primaryDark-900: hsl(210, 14%, 7%);
+	--muidocs-palette-primaryDark-main: hsl(210, 14%, 56%);
+	--muidocs-palette-primaryDark-mainChannel: 127 143 159;
+	--muidocs-palette-common-black: hsl(200, 10%, 4%);
+	--muidocs-palette-common-white: #fff;
+	--muidocs-palette-common-background: #fff;
+	--muidocs-palette-common-onBackground: #000;
+	--muidocs-palette-common-backgroundChannel: 255 255 255;
+	--muidocs-palette-common-onBackgroundChannel: 0 0 0;
+	--muidocs-palette-text-primary: hsl(215, 15%, 12%);
+	--muidocs-palette-text-secondary: hsl(215, 15%, 22%);
+	--muidocs-palette-text-tertiary: hsl(215, 15%, 40%);
+	--muidocs-palette-text-disabled: rgba(0, 0, 0, 0.38);
+	--muidocs-palette-text-primaryChannel: 26 30 35;
+	--muidocs-palette-text-secondaryChannel: 48 55 65;
+	--muidocs-palette-grey-50: hsl(215, 15%, 97%);
+	--muidocs-palette-grey-100: hsl(215, 15%, 92%);
+	--muidocs-palette-grey-200: hsl(215, 15%, 89%);
+	--muidocs-palette-grey-300: hsl(215, 15%, 82%);
+	--muidocs-palette-grey-400: hsl(215, 15%, 75%);
+	--muidocs-palette-grey-500: hsl(215, 15%, 65%);
+	--muidocs-palette-grey-600: hsl(215, 15%, 50%);
+	--muidocs-palette-grey-700: hsl(215, 15%, 40%);
+	--muidocs-palette-grey-800: hsl(215, 15%, 22%);
+	--muidocs-palette-grey-900: hsl(215, 15%, 12%);
+	--muidocs-palette-grey-main: hsl(215, 15%, 92%);
+	--muidocs-palette-grey-contrastText: hsl(215, 15%, 50%);
+	--muidocs-palette-grey-A100: #f5f5f5;
+	--muidocs-palette-grey-A200: #eeeeee;
+	--muidocs-palette-grey-A400: #bdbdbd;
+	--muidocs-palette-grey-A700: #616161;
+	--muidocs-palette-grey-mainChannel: 232 234 238;
+	--muidocs-palette-grey-contrastTextChannel: 108 124 147;
+	--muidocs-palette-error-50: hsl(355, 98%, 97%);
+	--muidocs-palette-error-100: hsl(355, 98%, 93%);
+	--muidocs-palette-error-200: hsl(355, 98%, 87%);
+	--muidocs-palette-error-300: hsl(355, 98%, 80%);
+	--muidocs-palette-error-400: hsl(355, 98%, 74%);
+	--muidocs-palette-error-500: hsl(355, 98%, 66%);
+	--muidocs-palette-error-600: hsl(355, 98%, 46%);
+	--muidocs-palette-error-700: hsl(355, 98%, 39%);
+	--muidocs-palette-error-800: hsl(355, 98%, 29%);
+	--muidocs-palette-error-900: hsl(355, 98%, 17%);
+	--muidocs-palette-error-main: hsl(355, 98%, 66%);
+	--muidocs-palette-error-light: hsl(355, 98%, 80%);
+	--muidocs-palette-error-dark: hsl(355, 98%, 39%);
+	--muidocs-palette-error-contrastText: #fff;
+	--muidocs-palette-error-mainChannel: 253 83 97;
+	--muidocs-palette-error-lightChannel: 254 154 162;
+	--muidocs-palette-error-darkChannel: 197 2 18;
+	--muidocs-palette-error-contrastTextChannel: 255 255 255;
+	--muidocs-palette-success-50: hsl(144, 72%, 95%);
+	--muidocs-palette-success-100: hsl(144, 72%, 87%);
+	--muidocs-palette-success-200: hsl(144, 72%, 77%);
+	--muidocs-palette-success-300: hsl(144, 72%, 66%);
+	--muidocs-palette-success-400: hsl(144, 72%, 56%);
+	--muidocs-palette-success-500: hsl(144, 72%, 46%);
+	--muidocs-palette-success-600: hsl(144, 72%, 41%);
+	--muidocs-palette-success-700: hsl(144, 72%, 37%);
+	--muidocs-palette-success-800: hsl(144, 72%, 32%);
+	--muidocs-palette-success-900: hsl(144, 72%, 21%);
+	--muidocs-palette-success-main: hsl(144, 72%, 37%);
+	--muidocs-palette-success-light: hsl(144, 72%, 66%);
+	--muidocs-palette-success-dark: hsl(144, 72%, 37%);
+	--muidocs-palette-success-contrastText: #fff;
+	--muidocs-palette-success-mainChannel: 26 162 81;
+	--muidocs-palette-success-lightChannel: 106 231 156;
+	--muidocs-palette-success-darkChannel: 26 162 81;
+	--muidocs-palette-success-contrastTextChannel: 255 255 255;
+	--muidocs-palette-warning-50: hsl(48, 100%, 96%);
+	--muidocs-palette-warning-100: hsl(48, 100%, 88%);
+	--muidocs-palette-warning-200: hsl(48, 100%, 82%);
+	--muidocs-palette-warning-300: hsl(48, 100%, 64%);
+	--muidocs-palette-warning-400: hsl(48, 100%, 48%);
+	--muidocs-palette-warning-500: hsl(48, 100%, 44%);
+	--muidocs-palette-warning-600: hsl(40, 100%, 40%);
+	--muidocs-palette-warning-700: hsl(36, 100%, 34%);
+	--muidocs-palette-warning-800: hsl(36, 100%, 27%);
+	--muidocs-palette-warning-900: hsl(36, 100%, 18%);
+	--muidocs-palette-warning-main: hsl(48, 100%, 44%);
+	--muidocs-palette-warning-light: hsl(48, 100%, 64%);
+	--muidocs-palette-warning-dark: hsl(36, 100%, 34%);
+	--muidocs-palette-warning-contrastText: rgba(0, 0, 0, 0.87);
+	--muidocs-palette-warning-mainChannel: 224 180 0;
+	--muidocs-palette-warning-lightChannel: 255 218 71;
+	--muidocs-palette-warning-darkChannel: 173 104 0;
+	--muidocs-palette-warning-contrastTextChannel: 0 0 0;
+	--muidocs-palette-gradients-radioSubtle: radial-gradient(100% 90% at 50% 0, transparent 0, hsla(210, 100%, 90%, 0.3) 300%);
+	--muidocs-palette-gradients-linearSubtle: linear-gradient(0deg, hsla(210, 100%, 96%, 0.4), hsla(215, 15%, 97%, 0.1));
+	--muidocs-palette-info-main: #0288d1;
+	--muidocs-palette-info-light: #03a9f4;
+	--muidocs-palette-info-dark: #01579b;
+	--muidocs-palette-info-contrastText: #fff;
+	--muidocs-palette-info-mainChannel: 2 136 209;
+	--muidocs-palette-info-lightChannel: 3 169 244;
+	--muidocs-palette-info-darkChannel: 1 87 155;
+	--muidocs-palette-info-contrastTextChannel: 255 255 255;
+	--muidocs-palette-background-paper: #fff;
+	--muidocs-palette-background-default: #fff;
+	--muidocs-palette-background-defaultChannel: 255 255 255;
+	--muidocs-palette-background-paperChannel: 255 255 255;
+	--muidocs-palette-action-active: rgba(0, 0, 0, 0.54);
+	--muidocs-palette-action-hover: rgba(0, 0, 0, 0.04);
+	--muidocs-palette-action-hoverOpacity: 0.04;
+	--muidocs-palette-action-selected: rgba(0, 0, 0, 0.08);
+	--muidocs-palette-action-selectedOpacity: 0.08;
+	--muidocs-palette-action-disabled: rgba(0, 0, 0, 0.26);
+	--muidocs-palette-action-disabledBackground: rgba(0, 0, 0, 0.12);
+	--muidocs-palette-action-disabledOpacity: 0.38;
+	--muidocs-palette-action-focus: rgba(0, 0, 0, 0.12);
+	--muidocs-palette-action-focusOpacity: 0.12;
+	--muidocs-palette-action-activatedOpacity: 0.12;
+	--muidocs-palette-action-activeChannel: 0 0 0;
+	--muidocs-palette-action-selectedChannel: 0 0 0;
+	--muidocs-palette-Alert-errorColor: hsl(355, 98%, 32%);
+	--muidocs-palette-Alert-infoColor: rgb(1, 67, 97);
+	--muidocs-palette-Alert-successColor: hsl(144, 72%, 26.400000000000002%);
+	--muidocs-palette-Alert-warningColor: hsl(48, 100%, 25.6%);
+	--muidocs-palette-Alert-errorFilledBg: var(--muidocs-palette-error-main, hsl(355, 98%, 66%));
+	--muidocs-palette-Alert-infoFilledBg: var(--muidocs-palette-info-main, #0288d1);
+	--muidocs-palette-Alert-successFilledBg: var(--muidocs-palette-success-main, hsl(144, 72%, 37%));
+	--muidocs-palette-Alert-warningFilledBg: var(--muidocs-palette-warning-main, hsl(48, 100%, 44%));
+	--muidocs-palette-Alert-errorFilledColor: #fff;
+	--muidocs-palette-Alert-infoFilledColor: #fff;
+	--muidocs-palette-Alert-successFilledColor: #fff;
+	--muidocs-palette-Alert-warningFilledColor: rgba(0, 0, 0, 0.87);
+	--muidocs-palette-Alert-errorStandardBg: hsl(355, 98%, 98%);
+	--muidocs-palette-Alert-infoStandardBg: rgb(229, 246, 253);
+	--muidocs-palette-Alert-successStandardBg: hsl(144, 72%, 96.6%);
+	--muidocs-palette-Alert-warningStandardBg: hsl(48, 100%, 96.4%);
+	--muidocs-palette-Alert-errorIconColor: var(--muidocs-palette-error-main, hsl(355, 98%, 66%));
+	--muidocs-palette-Alert-infoIconColor: var(--muidocs-palette-info-main, #0288d1);
+	--muidocs-palette-Alert-successIconColor: var(--muidocs-palette-success-main, hsl(144, 72%, 37%));
+	--muidocs-palette-Alert-warningIconColor: var(--muidocs-palette-warning-main, hsl(48, 100%, 44%));
+	--muidocs-palette-AppBar-defaultBg: var(--muidocs-palette-grey-100, hsl(215, 15%, 92%));
+	--muidocs-palette-Avatar-defaultBg: var(--muidocs-palette-grey-400, hsl(215, 15%, 75%));
+	--muidocs-palette-Button-inheritContainedBg: var(--muidocs-palette-grey-300, hsl(215, 15%, 82%));
+	--muidocs-palette-Button-inheritContainedHoverBg: var(--muidocs-palette-grey-A100, #f5f5f5);
+	--muidocs-palette-Chip-defaultBorder: var(--muidocs-palette-grey-400, hsl(215, 15%, 75%));
+	--muidocs-palette-Chip-defaultAvatarColor: var(--muidocs-palette-grey-700, hsl(215, 15%, 40%));
+	--muidocs-palette-Chip-defaultIconColor: var(--muidocs-palette-grey-700, hsl(215, 15%, 40%));
+	--muidocs-palette-FilledInput-bg: rgba(0, 0, 0, 0.06);
+	--muidocs-palette-FilledInput-hoverBg: rgba(0, 0, 0, 0.09);
+	--muidocs-palette-FilledInput-disabledBg: rgba(0, 0, 0, 0.12);
+	--muidocs-palette-LinearProgress-primaryBg: hsl(210, 100%, 79.1%);
+	--muidocs-palette-LinearProgress-secondaryBg: hsl(210, 14%, 95.06%);
+	--muidocs-palette-LinearProgress-errorBg: hsl(355, 98%, 87.08%);
+	--muidocs-palette-LinearProgress-infoBg: rgb(158, 209, 237);
+	--muidocs-palette-LinearProgress-successBg: hsl(144, 72%, 76.06%);
+	--muidocs-palette-LinearProgress-warningBg: hsl(48, 100%, 78.72%);
+	--muidocs-palette-Skeleton-bg: rgba(var(--muidocs-palette-text-primaryChannel, undefined) / 0.11);
+	--muidocs-palette-Slider-primaryTrack: hsl(210, 100%, 79.1%);
+	--muidocs-palette-Slider-secondaryTrack: hsl(210, 14%, 95.06%);
+	--muidocs-palette-Slider-errorTrack: hsl(355, 98%, 87.08%);
+	--muidocs-palette-Slider-infoTrack: rgb(158, 209, 237);
+	--muidocs-palette-Slider-successTrack: hsl(144, 72%, 76.06%);
+	--muidocs-palette-Slider-warningTrack: hsl(48, 100%, 78.72%);
+	--muidocs-palette-SnackbarContent-bg: rgb(50, 50, 50);
+	--muidocs-palette-SnackbarContent-color: #fff;
+	--muidocs-palette-SpeedDialAction-fabHoverBg: rgb(216, 216, 216);
+	--muidocs-palette-StepConnector-border: var(--muidocs-palette-grey-400, hsl(215, 15%, 75%));
+	--muidocs-palette-StepContent-border: var(--muidocs-palette-grey-400, hsl(215, 15%, 75%));
+	--muidocs-palette-Switch-defaultColor: var(--muidocs-palette-common-white, #fff);
+	--muidocs-palette-Switch-defaultDisabledColor: var(--muidocs-palette-grey-100, hsl(215, 15%, 92%));
+	--muidocs-palette-Switch-primaryDisabledColor: hsl(210, 100%, 79.1%);
+	--muidocs-palette-Switch-secondaryDisabledColor: hsl(210, 14%, 95.06%);
+	--muidocs-palette-Switch-errorDisabledColor: hsl(355, 98%, 87.08%);
+	--muidocs-palette-Switch-infoDisabledColor: rgb(158, 209, 237);
+	--muidocs-palette-Switch-successDisabledColor: hsl(144, 72%, 76.06%);
+	--muidocs-palette-Switch-warningDisabledColor: hsl(48, 100%, 78.72%);
+	--muidocs-palette-TableCell-border: hsla(215, 15%, 99.04%, 1);
+	--muidocs-palette-Tooltip-bg: hsla(215, 15%, 40%, 0.92);
+	--muidocs-palette-dividerChannel: 232 234 238;
+	--muidocs-opacity-inputPlaceholder: 0.42;
+	--muidocs-opacity-inputUnderline: 0.42;
+	--muidocs-opacity-switchTrackDisabled: 0.12;
+	--muidocs-opacity-switchTrack: 0.38;
 }
 
 * {
