--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -383,7 +383,7 @@ div.flash:has(svg) > svg.icon-svg,
 .nodata:has(svg) > svg.icon-svg,
 .warning:has(svg) > svg.icon-svg,
 .conflict:has(svg) > svg.icon-svg {
-  margin: 0;
+  margin: 0 0 0 2px;
   position: relative;
   top: auto;
   right: auto;
@@ -1347,9 +1347,18 @@ div.issue .attributes .attribute.progress p.percent {
 #content #context-menu ul {
   padding: 0;
 }
+#content #context-menu ul li {
+  border: 0 none;
+}
+#content #context-menu ul li:hover {
+  border: 0 none;
+}
+#content #context-menu ul li:hover > a {
+  background: #eef5fd;
+}
 #content #context-menu ul li a {
   height: auto;
-  padding: 6px 12px;
+  padding: 6px 8px;
   border-radius: 0;
   color: var(--muidocs-palette-primary-500);
   background: #fff;
@@ -1359,10 +1368,15 @@ div.issue .attributes .attribute.progress p.percent {
   letter-spacing: 0;
   text-transform: none;
   text-decoration: none;
+  text-shadow: none;
   display: inline-flex;
   align-items: center;
+  justify-content: flex-start;
   gap: 2px;
   transition: all 0.2s;
+}
+#content #context-menu ul li a svg.icon-svg {
+  stroke: var(--muidocs-palette-primary-500);
 }
 #content #context-menu.reverse-x ul li.folder > ul {
   right: 144px;
