--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -877,6 +877,9 @@ select {
   margin-bottom: 0;
   border: 0 none;
   float: none;
+  transition: all 0.2s;
+  width: 40px;
+  background: transparent;
 }
 #quick-search #q.autocomplete {
   padding-left: 10px !important;
@@ -885,6 +888,21 @@ select {
   height: 44px;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+#quick-search #q:focus {
+  border: 2px solid lime;
+}
+#quick-search #q:focus-visible {
+  border: 2px solid purple;
+}
+#quick-search #q:focus-within {
+  border: 2px solid pink;
+}
+#quick-search #q:active {
+  border: 2px solid palegoldenrod;
+}
+#quick-search #q::before {
+  content: "";
 }
 #quick-search form {
   float: none;
