--- a/src/scss/_admin.scss
+++ b/src/scss/_admin.scss
@@ -12,7 +12,7 @@
 			padding: 0;
 			a {
 				@include components.button;
-				background-color: #f0f0f0;
+				// background-color: #f0f0f0;
 				display: block;
 				#sidebar-wrapper & {
 					padding-top: 6px;
