--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -155,6 +155,10 @@
 					height: 20px;
 				}
 			}
+			&.floating {
+				display: inline-flex;
+				margin-right: 10px;
+			}
 		}
 		span {
 			label {
