--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -204,14 +204,17 @@ fieldset {
 }
 
 @mixin alert {
+	display: flex;
+	align-items: center;
 	padding: 16px 32px;
 	border-radius: var(--input--border--radius);
 	font-size: 1rem;
+	gap: 5px;
 	svg.icon-svg {
 		margin-left: 0;
 	}
 	&:has(svg) > svg.icon-svg {
-		margin: 0 0 0 2px;
+		margin: 0;
 		position: relative;
 		top: auto;
 		right: auto;
@@ -220,6 +223,7 @@ fieldset {
 		margin-top: 0;
 		margin-bottom: 0;
 		display: inline-block;
+		padding-left: 20px;
 	}
 }
 
@@ -245,7 +249,7 @@ div.flash,
 	p {
 		padding: 0 !important;
 		margin: 0.8em 0;
-		font-size: 1rem;
+		font-size: 0.875rem;
 		display: block;
 	}
 	pre {
@@ -312,7 +316,7 @@ div.flash,
 
 @mixin card {
 	border-radius: 12px;
-	padding: 16px;
+	// padding: 16px;
 }
 
 .box {
