--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -1,35 +1,69 @@
 @use "components";
 
 #projects-index {
-	.projects.root {
-		& > .root {
-			@include components.card;
-			position: relative;
-			transition: background-color 0.2s;
-			&:hover {
-				background-color: #f0f0f0;;
+	ul.projects {
+		& > li {
+			&.root,
+			&.child {
+				@include components.card;
+				position: relative;
+				transition: background-color 0.2s;
+				padding: 0;
+				display: flex;
+				flex-direction: column;
+				gap: 0;
+				& > div {
+					position: relative;
+					padding: 16px;
+					& > a {
+						&[href]::before {
+							content: "";
+							position: absolute;
+							top: 0;
+							left: 0;
+							right: 0;
+							bottom: 0;
+						}
+						&:hover {
+							color: inherit;
+							text-decoration: none;
+							// &::before {
+							// 	background: #f0f0f0;
+							// }
+						}
+						&.project {
+							color: var(--muidocs-palette-primary-500);
+							padding: 0;
+							border: 0 none;
+							background-color: transparent;
+							text-transform: none;
+							font-weight: 500;
+							display: inline-block;
+							text-shadow: none;
+							margin-bottom: 0.25em;
+							position: static;
+							transition: color 0.2s;
+							&:hover {
+								color: var(--muidocs-palette-primary-800);
+							}
+						}
+						
+					}
+					svg {
+						stroke: var(--muidocs-palette-primary-500);
+						margin-bottom: 0.25em;
+					}
+				}
 			}
-			a {
-				&[href]::before {
-					content: "";
-					position: absolute;
-					top: 0;
-					left: 0;
-					right: 0;
-					bottom: 0;
+			&.child {
+				border: 1px solid #d0d7de;
+				border-radius: 8px;
+				margin-top: 8px;
+				&:first-child {
+					margin-top: 0;
 				}
-				&:hover {
-					color: inherit;
-					text-decoration: none;
-				}
-				&.project {
-					color: var(--muidocs-palette-primary-500);
-					padding: 0;
-					border: 0 none;
-					background-color: transparent;
-					text-transform: none;
-					font-weight: 500;
-					display: inline-block;
+				& > div {
+					padding: 10px 12px;
 				}
 			}
 			.wiki.description {
@@ -37,9 +71,11 @@
 				@include components.wiki;
 			}
 		}
-	}
-	ul.projects div.root a.project {
-
+		&:not(.root) {
+			margin-top: 0;
+			padding: 0 16px 16px !important;
+			border-left: 0 none !important;
+		}
 	}
 }
 
