--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -1,5 +1,6 @@
 // @use '../../node_modules/@carbon/styles/scss/reset';
 
+@use "inherit";
 
 @use "variables";
 @use "type";
@@ -7,6 +8,7 @@
 @use "top-menu";
 @use "header";
 @use "footer";
+@use "main";
 @use "projects";
 @use "content";
 @use "admin";
@@ -16,7 +18,7 @@
 @use "project/news";
 @use "project/documents";
 
-@import url("/assets/application-93308368.css");
+// @import url("/assets/application-93308368.css");
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
