--- a/src/scss/_admin.scss
+++ b/src/scss/_admin.scss
@@ -24,21 +24,23 @@
 }
 
 #login-form {
-	// background: var(--content--background);
-	// border: 0 none;
-	// box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
 	margin: 2em auto;
 	padding: 18px 22px;
 	width: 320px;
 	border: 1px solid #d0d7de;
 	background: var(--muidocs-palette-secondary-50);
-	box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+	box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+	// box-shadow: 0 1px 2px rgba(0,0,0,0.05);
 	label {
 		font-weight: 400;
 		padding-left: 2px;
+		margin-bottom: 5px;
+		display: block;
 	}
 	input {
+		width: 100%;
 		height: auto;
+		display: block;
 		&[type=text], &[type=password] {
 			margin-bottom: 18px;
 			height: 44px;
@@ -60,5 +62,8 @@
 			margin-left: auto;
 		}
 	}
-	
+	a.lost_password {
+		float:right; 
+		font-weight:normal;
+	}
 }
