--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -3,5 +3,6 @@
 	color: #3c3c3c;
 	font-size: 0.875rem;
 	padding: 16px;
-	border-top-color: var(--border--default);
+	text-align:center;
+	border-top: 1px solid var(--border--default);
 }
