--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -2,6 +2,7 @@
 
 #header {
 	// order: -1;
+	margin: 0;
 	background: var(--muidocs-palette-primary-900);
 	min-height: 0;
 	padding: 22px 25px;
@@ -11,6 +12,7 @@
 	justify-content: space-between;
 	align-items: center;
 	z-index: 99;
+	color: #fff;
 	&:has(> #main-menu) {
 		position: sticky;
 		top: -82px;
@@ -22,8 +24,16 @@
 		font-size: 1.25rem;
 		font-weight: 400;
 		order: -1;
+		.breadcrumbs { 
+			display:block; 
+			font-size: 0.875rem; 
+			font-weight: normal; 
+			line-height: 1.2em;
+		}
 	}
-
+	a, a:link, a:visited {
+		color: #fff;
+	}
 }
 
 #main-menu {
@@ -31,6 +41,13 @@
 	margin: 0;
 	left: auto;
 	bottom: auto;
+	width: 100%;
+	white-space: nowrap;
+	ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+	}
 	& > ul {
 		display: flex;
 		gap: 0;
