--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -55,10 +55,16 @@
 					}
 				}
 			}
+			&.root {
+				background: #f9fafb;
+				box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+			}
 			&.child {
+				background: #fff;
 				border: 1px solid #d0d7de;
 				border-radius: 8px;
 				margin-top: 8px;
+				box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.1), 0px 1px 1px 0px rgba(0, 0, 0, 0.07), 0px 1px 3px 0px rgba(0, 0, 0, 0.06);
 				&:first-child {
 					margin-top: 0;
 				}
