--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -53,8 +53,9 @@
 	}
 	a {
 		&.selected {
-			background: transparent;
-			color: #555;
+			background: var(--muidocs-palette-primary-700);
+			// background: transparent;
+			// color: #555;
 		}
 	}
 }
