--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -206,11 +206,12 @@ fieldset {
 @mixin alert {
 	display: flex;
 	align-items: center;
-	padding: 16px 32px;
+	padding: 16px 20px;
 	border-radius: var(--input--border--radius);
 	font-size: 1rem;
 	gap: 5px;
 	border: 1px solid;
+	margin-bottom: 0.75em;
 	svg.icon-svg {
 		margin-left: 0;
 	}
