--- a/src/scss/_type.scss
+++ b/src/scss/_type.scss
@@ -11,7 +11,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a, a:link {
-	color: var(--muidocs-palette-primary-700);
+	color: var(--muidocs-palette-primary-500);
 }
 
 table {
@@ -45,6 +45,10 @@ table {
 				padding: 0;
 				border: 0 none;
 				background-color: transparent;
+				color: var(--muidocs-palette-primary-500);
+				text-shadow: none;
+				font-weight: 600;
+				font-size: 0.875rem;
 			}
 			a {
 				&:has(svg) {
