--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -37,6 +37,8 @@
 	--input--border--radius: 6px;
 	--input--border--padding: 6px 16px;
 
+	--div--border--radius: 6px;
+
 	--global--padding: 16px;
 
 	--max-width: 1200px;
