--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -17,6 +17,7 @@
 @use "my-page";
 @use "project/news";
 @use "project/documents";
+@use "project/issue";
 
 // @import url("/assets/application-93308368.css");
 
