--- a/src/scss/_type.scss
+++ b/src/scss/_type.scss
@@ -10,8 +10,15 @@ h1, h2, h3, h4, h5, h6 {
 	margin: 0 0 0.6em;
 }
 
-a, a:link {
+a, a:link, a:visited {
 	color: var(--muidocs-palette-primary-500);
+	text-decoration: none;
+}
+a:hover, a:active {
+	color: var(--muidocs-palette-primary-800);
+}
+ul, ol {
+	padding-left: 20px;
 }
 
 table {
