main menu shadows

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -85,6 +85,7 @@
 			li {
 				a {
 					display: block;
+					text-shadow: none;
 					&:hover {
 						background-color: var(--muidocs-palette-primary-500);
 					}
