--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -478,3 +478,13 @@ div.flash {
 @mixin page-header {
 	min-height: 42px;
 }
+
+@mixin odd-row {
+	background-color: #fff; 
+}
+@mixin even-row {
+	background-color: #f6f7f8; 
+}
+@mixin active-row {
+	background-color:#ffffdd; 
+}
