--- a/src/scss/_type.scss
+++ b/src/scss/_type.scss
@@ -21,6 +21,18 @@ ul, ol {
 	padding-left: 20px;
 }
 
+.odd {
+	@include components.odd-row;
+}
+.even {
+	@include components.even-row;
+}
+.odd, .even {
+	&:hover {
+		@include components.active-row;
+	}
+}
+
 table {
 	&.list {
 		font-size: 0.875rem;
@@ -30,6 +42,25 @@ table {
     border-spacing: 0px;
 		box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
 		background-image: linear-gradient(rgba(255 255 255 / 0.051), rgba(255 255 255 / 0.051));
+		&:not(.odd-even) {
+			tbody {
+				tr {
+					&:nth-child(odd) {
+						@include components.odd-row;
+					}
+					&:nth-child(even) {
+						@include components.even-row;
+					}
+					&:nth-child(odd),
+					&:nth-child(even) {
+						&:hover {
+							@include components.active-row;
+						}
+					}
+				}
+			}
+		}
+		
 		thead {
 			tr {
 				th, td {
@@ -111,17 +142,23 @@ table {
 	}
 	&.issues {
 		tr.issue {
-			// &.priority-1 {
-			// 	background: var(--blue-100);
-			// }
-			&.priority-3 {
+			&[class*="priority-"] td.priority {
+				color: #000;
+			}
+			&.priority-1 td.priority {
+				background: var(--muidocs-palette-success-50);
+			}
+			&.priority-2 td.priority {
+				background: var(--muidocs-palette-success-100);
+			}
+			&.priority-3 td.priority {
+				background: var(--muidocs-palette-error-50); // rgba(251,105,98, 0.1);
+			}
+			&.priority-4 td.priority {
 				background: var(--muidocs-palette-error-100); // rgba(251,105,98, 0.1);
 			}
-			&.priority-4 {
+			&.priority-5 td.priority {
 				background: var(--muidocs-palette-error-200); // rgba(251,105,98, 0.1);
-			}
-			&.priority-5 {
-				background: var(--muidocs-palette-error-300); // rgba(251,105,98, 0.1);
 			}
 		}
 		
